# Atelier

./: .gitignore  AGENTS.md  DESIGN.md  README.md  open_atelier_ui_workbench.ps1  pyproject.toml
atelier/: __init__.py
docs/: ADAPTER_SPEC.md  APP_CODE_MAP.md  ARCHITECTURE.md  ARTIFACT_LIFECYCLE_SPEC.md  ASR_ADAPTER_SPEC.md  Atelier_Main_UI_Spec.md  BATCH_PIPELINE_SCHEDULING_SPEC.md  DATABASE_SCHEMA.md  DOC_ALIGNMENT_NOTES.md  EXECUTION_PLAN_SPEC.md  EXTERNAL_TOOL_INTEGRATION_SPEC.md  FAILURE_RECOVERY_SPEC.md  FFMPEG_ADAPTER_SPEC.md  HARDWARE_SCHEDULING_PAGE_SPEC.md  HARDWARE_SCHEDULING_SPEC.md  I18N_SPEC.md  MVP_ACCEPTANCE_SPEC.md  OCR_ADAPTER_SPEC.md  ONBOARDING_RUNTIME_SETUP_SPEC.md  PLUGIN_SYSTEM_SPEC.md  PRODUCT_FLOW_SPEC.md  RECENT_CHANGES.md  RELEASE_UPDATE_SPEC.md  RUNTIME_ENVIRONMENT_SPEC.md  SCHEDULING_PRESETS_SPEC.md  SECURITY_PRIVACY_SPEC.md  TRANSLATE_AGENT_SPEC.md  UI_MOTION_SPEC.md  UI_STATE_SPEC.md  UI_WORKSPACE_SPEC.md  VIDEO_ENHANCE_ADAPTER_SPEC.md  WORKCANVAS_PREVIEW_ARTIFACT_SPEC.md  WORKER_PROTOCOL.md  WORKFLOW_NODE_SPEC.md
tests/: test_adapter_registry.py  test_app_paths.py  test_app_runtime_setup_service.py  test_app_services.py  test_artifact_finalizer_adapter.py  test_backend_workflow_handoff.py  test_command_executor.py  test_failure_recovery.py  test_ffmpeg_audio_extract_adapter.py  test_ffprobe_metadata_adapter.py  test_gui_app_entry.py  test_gui_atelier_ui_component_workbench.py  test_gui_atelier_ui_foundation.py  test_gui_layout_store.py  test_gui_optional_dependency.py  test_gui_runtime_setup.py  test_gui_runtime_setup_state.py  (+27 more)
(+120 files in other folders)
