[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atelier"
version = "0.1.0"
description = "Local-first AI video workflow workstation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
gui = [
    "PySide6",
]
scheduler = [
    "networkx",
    "psutil",
    "nvidia-ml-py",
]
storage = [
    "SQLAlchemy>=2.0",
]

[tool.setuptools.packages.find]
include = ["atelier*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
